@@ -1,3 +1,9 @@
+2012-01-01  WOnder93  <omosnacek@gmail.com>
+
+	* Bang#.sln:
+	* Bang#.userprefs:
+	  
+
 2011-12-31  WOnder93  <omosnacek@gmail.com>
 
 	* Bang#.sln:
